# pictoria_api

./: .env-example  Cargo.toml  Dockerfile  README.md  context.json  diesel.toml  docker-entrypoint.sh  railway.toml
.cargo/: config.toml
migrations/2024-12-26-140712_add_profile_picture_url_to_users/: down.sql  up.sql
migrations/2024-12-27-061612_create_threads/: up.sql
migrations/2024-12-27-061705_create_comments/: up.sql
migrations/2024-12-29-004641_remove_title_from_threads/: down.sql  up.sql
migrations/2025-01-02-004120_add_table_for_chat/: up.sql
migrations/2025-04-22-022751_add_table_for_voice_journal/: up.sql
migrations/2025-04-22-025521_add_table_for_voice_week_journal/: down.sql  up.sql
migrations/2025-04-22-032004_add_table_for_voice_month_journal/: down.sql  up.sql
migrations/2025-05-30-004029_add_pivot_table_for_voice_weeks/: down.sql  up.sql
migrations/2025-05-30-004312_remove_voice_id_from_voices_weeks/: down.sql  up.sql
migrations/2025-06-02-024159_remove_voice_id_from_voices_month/: down.sql  up.sql
migrations/2025-06-08-100032_add_pivot_table_for_voice_months/: down.sql  up.sql
migrations/2025-06-09-010751_change_column_month_varchar_to_20/: down.sql  up.sql
migrations/2025-08-02-132722_add_table_for_log_book/: down.sql  up.sql
src/: build.rs  lib.rs  main.rs  schema.rs
src/controllers/: chats_controller.rs  comments_controllers.rs  log_books_controller.rs  mod.rs  threads_controllers.rs  users_controllers.rs  voices_controllers.rs
src/models/: chats.rs  cloudinary.rs  (+6 more)
tests/: auth_http_tests.rs  log_book_service_tests.rs
(+40 files in other folders)
