[package]
name = "yumana_api"
version = "1.0.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenvy = "0.15"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.200", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
serde_json = "1.0"
bcrypt = "0.16.0"
jsonwebtoken = "9.0.0"
rocket_cors = "0.6.0"
regex = "1.10.0"
once_cell = "1.19"
validator = { version = "0.19", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
urlencoding = "2.1.2"
redis = { version = "0.23.0", features = ["tls-native-tls"]}
